fix figure .half class, and create MD-inline class to avoid markdown breaks in certain cases

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -28,7 +28,7 @@ katex-inline.keepfont {
 }
 
 // layout figure and figcaption
-figure {
+figure:not(.half) {
     flex-direction: column;
 }
 
@@ -142,4 +142,8 @@ html {
   content: "";
   clear: both;
   display: table;
+}
+
+.MD-inline > p {
+    display: inline;
 }
